Project MVC_Stockies{
    database_type: 'MySql'
    Note: 'this application is built using PHP Native language and using mvc structure'
}

Table Sample{
    id int [pk, increment]
    name varchar    
}

Table Employees{
    id int [pk, increment]
    employee_code varchar
    employee_fullname varchar
    phone_number varchar
    address text
    role role_name
}

Table Suppliers{
    id int [pk, increment]
    company_name varchar
    contact_name varchar
    phone_number varchar
    address text
}

Table Categories{
    id int [pk, increment]
    category_name varchar
    description text
}

Table Products{
    id int [pk, increment]
    product_name varchar
    product_qty int
    unit_price int
    supplier_id int [ref: > Suppliers.id]
    category_id int [ref: > Categories.id]
}

Table Shippers{
    id int [pk, increment]
    company_name varchar
    phone_number varchar
}

Table Customers{
    id int [pk, increment]
    customer_fullname varchar
    phone_number varchar
    email varchar
    address text
}

Table Orders {
    id int [pk, increment]
    order_date timestamp [default: `now()`]    
    shipped_date date
    shipper_id int [ref: > Shippers.id]
    customer_id int [ref: > Customers.id]
    employee_id int [ref: > Employees.id]
}

Table OrderDetails{
    order_id int [ref: > Orders.id]
    product_id int [ref: > Products.id]
    total_price int
    total_qty int
    payment_status payment 
}

Enum payment {
    done
    delay
    onProgress
}

Enum role_name {
    Staff
    Manager
    Owner
    Admin
}